# opengl-renderer

./: .gitmodules  CMakeLists.txt  README.md
src/: file_watcher.h  input.h  logger.h  main.cpp
src/GL/: glshader.h
src/gui/: gui.h  widgets.h
src/renderer/: camera.h  light_cube.h  lights.h  material.h  material_buffer.h  mesh.h  model.cpp  model.h  renderer.h  scene.h  shader.h  texture_cache.h
src/shaders/: lighting.frag  pbr.frag  phong.frag  shader.frag  shader.vert  test.frag
